feat: implement GanttDate choke points throughout application
- Add essential properties to GanttDate (.Date, .ToString, subtraction)
- Update GanttTask model to use GanttDate for StartDate/EndDate
- Update all services for GanttDate compatibility:
  * TimelineView components use .ToUtcDateTime() conversions
  * TaskGrid components use .ToUtcDateTime() for DateTime params
  * SimpleTaskGeneratorService uses GanttDate.FromDateTime()
  * Demo pages use proper GanttDate conversions
- Configure GanttDateConverter in DbContext for database choke point
- Fix 34 build errors systematically, build now successful
- Choke point 1 (domain) and 2 (database) fully implemented

--- a/src/GanttComponents/Components/TaskGrid/TaskGrid.razor
+++ b/src/GanttComponents/Components/TaskGrid/TaskGrid.razor
@@ -57,11 +57,11 @@
                     </div>
                     
                     <div class="grid-cell" style="width: 120px;">
-                        @DateFormatter.FormatDate(task.StartDate)
+                        @DateFormatter.FormatDate(task.StartDate.ToUtcDateTime())
                     </div>
                     
                     <div class="grid-cell" style="width: 120px;">
-                        @DateFormatter.FormatDate(task.EndDate)
+                        @DateFormatter.FormatDate(task.EndDate.ToUtcDateTime())
                     </div>
                     
                     <div class="grid-cell" style="width: 100px;">
