--- a/src/GanttComponents/_Imports.razor
+++ b/src/GanttComponents/_Imports.razor
@@ -13,5 +13,6 @@
 @using GanttComponents.Components.TaskGrid
 @using GanttComponents.Components.TimelineView
 @using GanttComponents.Components.TimelineZoomControls
+@using GanttComponents.Components.TemplateSelector
 @using GanttComponents.Components.GanttComposer
 @using GanttComponents.Shared
