--- a/src/GanttComponents/Components/TimelineView/TimelineView.razor
+++ b/src/GanttComponents/Components/TimelineView/TimelineView.razor
@@ -27,10 +27,10 @@
              height="@TotalHeight">
             <!-- Timeline Body Group -->
             <g class="svg-timeline-body">
-                <!-- Grid lines for days -->
-                @for (var day = StartDate; day <= EndDate; day = day.AddDays(1))
+                <!-- Grid lines aligned with secondary header boundaries -->
+                @foreach (var date in GetSecondaryGridLineDates())
                 {
-                    var x = DayToPixel(day);
+                    var x = DayToPixel(date);
                     <line x1="@x" y1="0" x2="@x" y2="@TotalHeight" 
                           class="timeline-grid-line" />
                 }
